--- a/tools/README
+++ b/tools/README
@@ -1,4 +1,4 @@
 These files are not part of IrpTransmogrifier proper.
-They are either tests, or 
+These are small tools for maintenance and such.
 
 Unless otherwise stated, they are in the public domain.
